--- a/index.html
+++ b/index.html
@@ -126,7 +126,13 @@
 
                 <!--文件管理标签页-->
                 <div class="tab-pane fade" id="fmanager">
-                    <input v-model="initFolder" class="col-sm-12" />
+                    <div class="input-group">
+                        <span class="input-group-addon"> > </span>
+                        <input type="text" class="form-control" v-model="folderPath" />
+                        <span class="input-group-btn">
+                            <button @click="path_to_folder" class="btn btn-primary" type="button"> -> </button>
+                        </span>
+                    </div>
                     <table class="table table-striped col-sm-12">
                         <thead>
                             <tr>
@@ -138,7 +144,7 @@
                         </thead>
                         <tbody>
                             <tr v-for="(fileinfo, index) in dirs">
-                                <td>{{ fileinfo.name }}</td>
+                                <td @click="click_to_folder(index)" style="cursor:pointer">{{ fileinfo.name }}</td>
                                 <td>{{ fileinfo.mtime }}</td>
                                 <td>{{ fileinfo.size | filter_format_file_size }}</td>
                                 <td>{{ fileinfo.perm }}</td>
@@ -167,7 +173,8 @@
             } else {
                 return (value/1024/1024).toFixed(1) + 'MB';
             }
-        })
+        });
+
         var shell_list = new Vue({
             el: '#shell',
             data: {
@@ -204,25 +211,14 @@
                 show_fmanager: function (index) {
                     shellinfo = this.shelllist[index];
                     document.getElementById('tabfmanager').click();
-                    $.ajax({
-                        type: 'POST',
-                        url: 'http://127.0.0.1:8080/getfilelist',
-                        data: {
-                            url: shellinfo['url'],
-                            pwd: shellinfo['pwd'],
-                            plugin: shellinfo['plugin'],
-                            method: shellinfo['method'],
-                        },
-                        success: function (data) {
-                            file_manager.get_data(data);
-                        }
-                    });
+                    file_manager.show_file_list(shellinfo);
                 },
                 show_vterm: function (index) {
                     document.getElementById('tabvterm').click();
                 }
             }
         });
+
         var shell_add = new Vue({
             el: '#shelladdpost',
             data: {
@@ -250,23 +246,70 @@
                 }
             }
         });
+        
         var file_manager = new Vue({
             el: '#fmanager',
             data: {
-                initFolder: '',
+                folderPath: '',
                 drivers: [],
                 systemInfo: '',
                 dirs: [],
+                shellinfo: {},
             },
             methods: {
                 get_data: function (data) {
-                    this.initFolder = data['sysinfo']['current_dir']
-                    this.drivers = data['sysinfo']['drivers']
-                    this.systemInfo = data['sysinfo']['system_info']
-                    this.dirs = data['filelist']['dirs']
+                    if (this.folderPath === '') this.folderPath = data['sysinfo']['current_dir'];
+                    this.drivers = data['sysinfo']['drivers'];
+                    this.systemInfo = data['sysinfo']['system_info'];
+                    this.dirs = data['filelist']['dirs'];
+                },
+                show_file_list: function(shellinfo, path='') {
+                    this.shellinfo = shellinfo;
+                    var _self = this;
+                    $.ajax({
+                        type: 'POST',
+                        url: 'http://127.0.0.1:8080/getfilelist',
+                        data: {
+                            url: shellinfo['url'],
+                            pwd: shellinfo['pwd'],
+                            plugin: shellinfo['plugin'],
+                            method: shellinfo['method'],
+                            path: path,
+                        },
+                        success: function (data) {
+                            _self.get_data(data);
+                        }
+                    });
+                },
+                path_to_folder: function () {
+                    this.show_file_list(this.shellinfo, this.folderPath);
+                },
+                click_to_folder: function (index) {
+                    var filename = this.dirs[index]['name'];
+                    if (filename.indexOf('/') !== -1) {
+                        if (filename === '../')
+                            this.folderPath = get_parent_path(this.folderPath);
+                        else if (filename === './')
+                            this.folderPath = this.folderPath;
+                        else if (this.folderPath.indexOf('/') !== -1)
+                            this.folderPath += '/'+filename.replace('/','');
+                        else if (this.folderPath.indexOf('\\') !== -1)
+                            this.folderPath += '\\'+filename.replace('/','');
+
+                        this.path_to_folder();
+                    }
                 }
             }
         });
+
+        // get the path of parent folder
+        var get_parent_path = function (path) {
+            if (path[-1] === '/' || path[-1] === '\\')
+                path = path.slice(0, -1);
+            if (path.indexOf(':\\'))
+                return path.slice(0, path.lastIndexOf('\\'));
+            return path.slice(0, path.lastIndexOf('/'));
+        }
     </script>
 </body>
 </html>
