:bug: bottle取POST参数乱码修正与前端路径分隔符调整

--- a/index.html
+++ b/index.html
@@ -303,12 +303,13 @@
                     $.ajax({
                         type: 'POST',
                         url: '/getfilelist',
+                        contentType: "application/x-www-form-urlencoded; charset=utf-8",
                         data: {
                             url: shellinfo['url'],
                             pwd: shellinfo['pwd'],
                             plugin: shellinfo['plugin'],
                             method: shellinfo['method'],
-                            path: path,
+                            path: path.replace(/\\/g,'\\\\'),
                         },
                         success: function (data) {
                             _self.get_data(data);
