--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
 
         <!--增加shell-->
-        <div class="row col-sm-12">
+        <div class="toolbar row col-sm-12">
             <!-- 按钮触发模态框  增加shell -->
             <button class="btn btn-primary" data-toggle="modal" data-target="#shelladdpost">增加shell</button>
             <!-- 模态框（Modal） 增加shell -->
